force-app/main/default/objects/GeneratedWaste/GeneratedWaste.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>