force-app/main/default/objects/GeneratedWaste/fields/Data_Approver__c.field-meta.xml
<CustomField>
    <fullName>Data_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Venkat: Created as part of NZC Phase 2 implementation.
Purpose: To capture the data approver of the record</description>
    <label>Data Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Generated_Waste1</relationshipName>
    <type>Lookup</type>
</CustomField>