force-app/main/default/objects/GeneratedWaste/fields/Disposed_Waste_Quantity_for_Meter_Cube__c.field-meta.xml
<CustomField>
    <fullName>Disposed_Waste_Quantity_for_Meter_Cube__c</fullName>
    <description>SB: Created for NZC Implementation. This field will capture Disposed Waste Quantity in m3</description>
    <inlineHelpText>Once selected, &apos;Disposed Waste Quantity Unit&apos; will be converted to kg value and please enter value for &apos;Disposed Waste Quantity for Meter Cube&apos;</inlineHelpText>
    <label>Disposed Waste Quantity for Meter Cube</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>