force-app/main/default/objects/GeneratedWaste/fields/Disposed_Waste_Quantity_Unit_Meter_Cube__c.field-meta.xml
<CustomField>
    <fullName>Disposed_Waste_Quantity_Unit_Meter_Cube__c</fullName>
    <description>SB: Created for NZC Implementation. This field will capture the unit of Disposed Waste Quantity value as m3</description>
    <inlineHelpText>Once selected, &apos;Disposed Waste Quantity&apos; will be overwritten and converted from m3 to kg and please select m3 under &apos;Disposed Waste Quantity Unit&apos;</inlineHelpText>
    <label>Disposed Waste Quantity Unit Meter Cube</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>m3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>