force-app/main/default/objects/GeneratedWaste/fields/NZC_GW_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>NZC_GW_Auto_Number__c</fullName>
    <description>HA: NZC auto number field which will be copied to external id field</description>
    <displayFormat>GW-{00000}</displayFormat>
    <label>NZC GW Auto Number</label>
    <type>AutoNumber</type>
</CustomField>