force-app/main/default/objects/GeneratedWaste/fields/Waste_Category__c.field-meta.xml
<CustomField>
    <fullName>Waste_Category__c</fullName>
    <label>Waste Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hazardous Waste</fullName>
            </value>
            <value>
                <fullName>E-Waste</fullName>
            </value>
            <value>
                <fullName>Bio Medical Waste</fullName>
            </value>
            <value>
                <fullName>Batteries Management</fullName>
            </value>
            <value>
                <fullName>Plastic Waste</fullName>
            </value>
            <value>
                <fullName>Municipal solid waste</fullName>
                <default>true</default>
                <label>Municipal solid waste</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>