force-app/main/default/objects/GeneratedWaste/validationRules/Disposed_Waste_Quantity_for_M3_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Disposed_Waste_Quantity_for_M3_not_null</fullName>
    <active>true</active>
    <description>SB: Implemented for NZC Implementation. Created this validation rule to throw an error if &quot;Disposed Waste Quantity for M3&quot; contains a value but &quot;Disposed Waste Quantity Custom Unit&quot; is null</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Disposed_Waste_Quantity_for_Meter_Cube__c)),
    NOT(ISPICKVAL(Disposed_Waste_Quantity_Unit_Meter_Cube__c,&quot;m3&quot;))
)</errorConditionFormula>
    <errorMessage>Please enter the unit for &quot;Disposed Waste Quantity Unit Meter Cube&quot; field</errorMessage>
</ValidationRule>