force-app/main/default/objects/GeneratedWaste/validationRules/Disposed_Waste_Quantity_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Disposed_Waste_Quantity_not_null</fullName>
    <active>true</active>
    <description>SB: Created for NZC Implementation. This validation rule will trigger if Disposed Waste Quantity for Meter Cube is blank but Disposed Waste Quantity Unit Meter Cube is not.</description>
    <errorConditionFormula>AND(ISPICKVAL(Disposed_Waste_Quantity_Unit_Meter_Cube__c, &quot;m3&quot;),ISBLANK(Disposed_Waste_Quantity_for_Meter_Cube__c))</errorConditionFormula>
    <errorMessage>Please enter value for Disposed Waste Quantity for Meter Cube</errorMessage>
</ValidationRule>