force-app/main/default/objects/GeneratedWaste/listViews/INDIA_APAC_EMEA_Data_Approver_GeneratedWaste.listView-meta.xml
<ListView>
    <fullName>INDIA_APAC_EMEA_Data_Approver_GeneratedWaste</fullName>
    <filterScope>Queue</filterScope>
    <label>INDIA, APAC, EMEA Data Approver</label>
    <queue>INDIA_APAC_EMEA_Data_Approver</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>